# campus-academic-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  project-manifest.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: start.sh
frontend/src/: App.vue  main.js
frontend/src/api/: chat.js  config.js  document.js  index.js  knowledge.js
frontend/src/router/: index.js
frontend/src/store/: chat.js  index.js  knowledge.js  user.js
frontend/src/styles/: index.scss  reset.scss  theme.scss
frontend/src/utils/: common.js  katex.js  markdown.js
frontend/src/views/: ChatIndex.vue  DocumentPreview.vue  KnowledgeManage.vue  SystemSettings.vue
scripts/: batch_process.py  deploy.sh  init_project.py  interactive_query.py  test_full_pipeline.py  test_parser.py
src/api/: app.py
src/config/: settings.py
src/core/agent/: __init__.py  agent_base.py  generate_agent.py  iterate_agent.py  parse_agent.py  retrieve_agent.py  router.py  verify_agent.py
src/core/chunker/: __init__.py  base_chunker.py  metadata_binder.py  sentence_chunker.py
src/core/document_parser/: __init__.py  base_parser.py  docx_parser.py  parser_factory.py  pdf_parser.py  ppt_parser.py  text_parser.py
src/core/embedding/: __init__.py  embedding_engine.py  index_builder.py  keyword_index.py
src/core/generator/: __init__.py  citation_tracker.py  response_generator.py
src/core/retriever/: __init__.py  keyword_retriever.py  multi_way_merge.py  reranker.py  retrieval_engine.py  (+1 more)
src/utils/: __init__.py  logger.py
(+8 files in other folders)
