[tool.poetry]
name = "campus-academic-rag"
version = "1.0.0"
description = "校园学术智能RAG检索系统 - 专为校园学习科研场景打造的私有化RAG问答系统"
authors = ["Campus RAG Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# 文档解析
pdfplumber = "^0.11.0"
python-pptx = "^0.6.23"
python-docx = "^1.1.0"
# OCR与公式识别
pytesseract = "^0.3.10"
Pillow = "^10.3.0"
# 嵌入模型
sentence-transformers = "^3.0.0"
# 向量数据库
chromadb = "^0.5.0"
# 关键词检索
rank-bm25 = "^0.2.2"
jieba = "^0.42.1"
# Web框架
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
# LLM集成
openai = "^1.30.0"
anthropic = "^0.28.0"
# 工具库
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = "-v"
